--- a/mario/index.html
+++ b/mario/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 
 <head>
+    <link rel="icon" href="../assets/kaboomio-logo.png">
     <link rel="stylesheet" href="../styles/style.css">
     <script defer src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-    <title>Mario (NES)</title>
+    <title>Kaboomio</title>
 </head>
 
 <body>
