--- a/profile-page/index.html
+++ b/profile-page/index.html
@@ -29,9 +29,7 @@
     </div>
     <header>
         
-        
     </header>
-    <!-- <button id="logout">Logout</button> -->
     <main id="profilePage">
         <section class="flex-row space-between infoSection">
             <div class="profileMargins">
@@ -52,84 +50,84 @@
                     <label for="mario">
                         <input type="radio" name="avatar" id="mario">
                         <figure>
-                            <img src="../assets/avatars/mario.png" alt="" class="avatar-imgs">
+                            <img src="../assets/avatars/mario.png" alt="" class="avatar-imgs" draggable="false">
                             <figcaption>Mario</figcaption>
                         </figure>
                     </label>
                     <label for="luigi">
                         <input type="radio" name="avatar" id="luigi">
                         <figure>
-                            <img src="../assets/avatars/luigi.png" alt="" class="avatar-imgs">
+                            <img src="../assets/avatars/luigi.png" alt="" class="avatar-imgs" draggable="false">
                             <figcaption>Luigi</figcaption>
                         </figure>
                     </label>
                     <label for="yoshi">
                         <input type="radio" name="avatar" id="yoshi">
                         <figure>
-                            <img src="../assets/avatars/yoshi.png" alt="" class="avatar-imgs">
+                            <img src="../assets/avatars/yoshi.png" alt="" class="avatar-imgs" draggable="false">
                             <figcaption>Yoshi</figcaption>
                         </figure>
                     </label>
                     <label for="toad">
                         <input type="radio" name="avatar" id="toad">
                         <figure>
-                            <img src="../assets/avatars/toad.png" alt="" class="avatar-imgs">
+                            <img src="../assets/avatars/toad.png" alt="" class="avatar-imgs" draggable="false">
                             <figcaption>Toad</figcaption>
                         </figure>
                     </label>
                     <label for="peach">
                         <input type="radio" name="avatar" id="peach">
                         <figure>
-                            <img src="../assets/avatars/peach.png" alt="" class="avatar-imgs">
+                            <img src="../assets/avatars/peach.png" alt="" class="avatar-imgs" draggable="false">
                             <figcaption>Peach</figcaption>
                         </figure>
                     </label>
                     <label for="daisy">
                         <input type="radio" name="avatar" id="daisy">
                         <figure>
-                            <img src="../assets/avatars/daisy.png" alt="" class="avatar-imgs">
+                            <img src="../assets/avatars/daisy.png" alt="" class="avatar-imgs" draggable="false">
                             <figcaption>Daisy</figcaption>
                         </figure>
                     </label>
                     <label for="donkey-kong">
                         <input type="radio" name="avatar" id="donkey-kong">
                         <figure>
-                            <img src="../assets/avatars/donkey-kong.png" alt="" class="avatar-imgs">
+                            <img src="../assets/avatars/donkey-kong.png" alt="" class="avatar-imgs" draggable="false">
                             <figcaption>Donkey Kong</figcaption>
                         </figure>
                     </label>
                     <label for="toadette">
                         <input type="radio" name="avatar" id="toadette">
                         <figure>
-                            <img src="../assets/avatars/toadette.png" alt="" class="avatar-imgs">
+                            <img src="../assets/avatars/toadette.png" alt="" class="avatar-imgs" draggable="false">
                             <figcaption>Toadette</figcaption>
                         </figure>
                     </label>
                     <label for="bowser">
                         <input type="radio" name="avatar" id="bowser">
                         <figure>
-                            <img src="../assets/avatars/bowser.png" alt="" class="avatar-imgs">
+                            <img src="../assets/avatars/bowser.png" alt="" class="avatar-imgs" draggable="false">
                             <figcaption>Bowser</figcaption>
                         </figure>
                     </label>
                     <label for="wario">
                         <input type="radio" name="avatar" id="wario">
                         <figure>
-                            <img src="../assets/avatars/wario.png" alt="" class="avatar-imgs">
+                            <img src="../assets/avatars/wario.png" alt="" class="avatar-imgs" draggable="false">
                             <figcaption>Wario</figcaption>
                         </figure>
                     </label>
                     <label for="boo">
                         <input type="radio" name="avatar" id="boo">
                         <figure>
-                            <img src="../assets/avatars/boo.png" alt="" class="avatar-imgs">
+                            <img src="../assets/avatars/boo.png" alt="" class="avatar-imgs" draggable="false">
                             <figcaption>Boo</figcaption>
                         </figure>
                     </label>
                     <label for="koopa-troopa">
                         <input type="radio" name="avatar" id="koopa-troopa">
                         <figure>
-                            <img src="../assets/avatars/koopa-troopa.png" alt="" class="avatar-imgs">
+                            <img src="../assets/avatars/koopa-troopa.png" alt="" class="avatar-imgs" draggable="false">
                             <figcaption>Koopa Troopa</figcaption>
                         </figure>
                     </label>
