--- a/leaderboard/index.html
+++ b/leaderboard/index.html
@@ -13,25 +13,36 @@
     <link rel="stylesheet" href="../styles/home.css">
     <title>Leaderboard | Kaboomio</title>
     <style>
-        .leaderboard{
+    #leaderboard-body{
+        overflow: hidden;
+    }
+
+    .leaderboard{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    /* height: 100%; */
+    margin: 50px;
+    flex-wrap: wrap;
 }
 
 .leaderboard-left{
-    border: 1px solid black;
     height: 100%;
-    display: grid;
-    align-content: center;
+    border: none;
+    padding: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .leaderboard-right{
-    border: 1px solid black;
-    /* height: 100%; */
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: black;
+    color: white;
+    overflow: hidden;
+    height: 100%;
+    border-radius: 10px;
+    min-width: 270px;
 }
 
 select{
@@ -43,14 +54,17 @@ select{
 }
 
 h1{
-    margin: 0;
+    margin: 15px;
     padding: 0;
 }
 
 .score-container{
     display: flex;
-    width: 100%;
+    width: 90%;
+    height: 300px;
     flex-direction: column;
+    animation: scrolling 5s linear forwards;
+    position: relative;
 }
 
 .table{
@@ -58,7 +72,7 @@ h1{
     width: 100%;
     flex-direction: row; 
     align-items: center;
-justify-content: center;
+    justify-content: center;
 }
 
 .score{
@@ -66,19 +80,28 @@ display: flex;
 flex-direction: row;
 align-items: center;
 justify-content: center;
-
+font: 3vw;
+color: goldenrod;
+margin: 0px;
+padding: 0px;
 }
 
 .score h3{
-    margin-right: 15px;
+    margin-right: 0px;
 }
 
 .table h3{
     margin-right: 15px;
 }
 
-.score P {
+.score p {
     margin: 0;
+}
+
+@keyframes scrolling {
+    0% {top: 400px;}
+    100% {top: 0px; }
+    
 }
     </style>
     <!-- Keep below in this html file -->
@@ -88,9 +111,28 @@ justify-content: center;
                 font-size: 1rem;
             }
         }
+
+        @media (max-width: 950px){
+            .leaderboard-left{
+                width: 200px;
+            }
+            .leaderboard-left img{
+                width: 200px;
+                animation: shrink 1s ease-in;
+                display: flex;
+                justify-content: flex-start;
+                align-items: flex-start;
+            }
+        }
+        @keyframes shrink {
+            0%{width: 535px }
+            50%{width: 350}
+            100%{width: 200px}
+        }
+
     </style>
 </head>
-<body>
+<body id="leaderboard-body">
     <div class="loading-screen invisible">
         <div class="loading-img-container">
             <img src="../assets/mario-running.gif" class="loading-img" />
@@ -113,7 +155,7 @@ justify-content: center;
     <div class="leaderboard">
 <div class="leaderboard-left">
 
-    <img class="trophy" src="../assets/leaderboard-trophy.png" alt="">
+    <a href="/about-page/index.html"><img class="trophy" src="../assets/leaderboard-trophy.png" alt=""></a>
 
 </div>
 
