changed table config

--- a/profile-page/index.html
+++ b/profile-page/index.html
@@ -138,21 +138,10 @@
             </form>
         </div>
         <p id="bio"></p>
-        <h3>Previous Scores</h3>
-        <table>
-            <thead>
-                <tr>
-                    <th>Initials</th>
-                    <th>Score</th>
-                    <th>Level</th>
-                    <th>Date</th>
-                    <th>Elapsed Time</th>
-                </tr>
-            </thead>
-            <tbody id="previousScoresContainer">
+        <h3>User Scores</h3>
+        <div id="previousScoresContainer">
 
-            </tbody>
-        </table>
+        </div>
     </main>
     <footer>
         <div class="footer-left">
