--- a/mario/index.html
+++ b/mario/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="icon" href="../assets/kaboomio-logo.png">
+    <link rel="icon" href="../assets/kaboomio-logo-small.png">
     <link rel="stylesheet" href="../styles/style.css">
     <script defer src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
     <title>Kaboomio</title>
