starting to work on tooltips

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <a href="../leaderboard/">
                     <img src="../assets/trophy-icon.png" id="trophy-icon" />
                 </a>
+                <span class="tooltiptext">Leaderboard</span>
             </div>
         </div>
     </header>
