added new gif image to homepage

--- a/home-page/index.html
+++ b/home-page/index.html
@@ -31,7 +31,7 @@
         <h1>Lets play some games</h1>
         <section id="second-row">
             <section id="display-games">
-                <img src="/assets/Mario.gif" />
+                <img src="/assets/real-play.GIF" />
                 <button id="play-game-button">Play Game</button>
             </section>
             <section id="leaderboard-container">
