add delete button to score table

--- a/profile-page/index.html
+++ b/profile-page/index.html
@@ -40,6 +40,7 @@
                 <span id="joinedDate">Joined Date: </span>
             </div>
             <button id="editButton" class="hidden">Edit Profile</button>
+            <p id="bio"></p>
         </section>
         <div class="profileEditForm hidden">
             <form id="editProfile">
@@ -145,10 +146,11 @@
                 </div>
             </form>
         </div>
-        <p id="bio"></p>
-        <h3>User Scores</h3>
-        <div id="previousScoresContainer">
+        <div class="scoreDiv">
+            <h3>User Scores</h3>
+            <div id="previousScoresContainer">
 
+            </div>
         </div>
     </main>
     <footer>
