--- a/about-page/index.html
+++ b/about-page/index.html
@@ -78,11 +78,13 @@
                 <a href="../leaderboard/">
                     <img src="../assets/trophy-icon.png" id="trophy-icon" />
                 </a>
+                <span class="tooltip">Leaderboard</span>
             </div>
             <div class="icons">
                 <a href="../">
                     <img src="../assets/sign-in-icon.png" id="sign-in-icon" />
                 </a>
+                <span class="tooltip">Sign In</span>
             </div>
         </div>
     </header>    
