--- a/leaderboard/index.html
+++ b/leaderboard/index.html
@@ -40,6 +40,7 @@
                 <a href="../">
                     <img src="../assets/sign-in-icon.png" id="sign-in-icon" />
                 </a>
+                <span class="tooltip">Sign In</span>
             </div>
         </div>
     </header>    
