made images and links non draggable

--- a/home-page/index.html
+++ b/home-page/index.html
@@ -26,26 +26,26 @@
     <main id="homepage2">
         <section id="kaboomio">
             <h1>Welcome to Kaboomio</h1>
-            <img id="kaboomio-img" src="/assets/Kaboomio.gif" />
+            <img id="kaboomio-img" src="/assets/Kaboomio.gif" draggable="false" />
         </section>
         <h1>Lets play some games</h1>
         <section id="second-row">
             <section id="display-games">
-                <img src="/assets/real-play.GIF" />
+                <img src="/assets/real-play.GIF" draggable="false" />
                 <button id="play-game-button">Play Game</button>
             </section>
             <section id="leaderboard-container">
-                <p id="label">Leader Board <a href="/leaderboard/index.html">🏆</a></p>
+                <p id="label">Leader Board <a href="/leaderboard/index.html" draggable="false">🏆</a></p>
                 <div id="display-leaderboard">
                 </div>
-                <a href="/about-page/index.html" id="yoshi-egg"><img src="/assets/egg gif.gif"></a>
+                <a href="/about-page/index.html" id="yoshi-egg" draggable="false"><img src="/assets/egg gif.gif" draggable="false"></a>
             </section>
         </section>
         <!-- <img  id='kaboomio-logo' src="/assets/Kaboomio.gif" /> -->
     </main>
     <footer>
         <div class="footer-left">
-            <a href="../about-page" id="about-link">
+            <a href="../about-page" id="about-link" draggable="false">
                 <div>
                     Meet the Team
                 </div>
