--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 <body>
     <header>
         <div class="header-left">
-            <img src="assets/kaboomio-logo-small.png" class="logo" />
+            <img src="assets/kaboomio-logo-small.png" class="logo" draggable="false" />
             <h1 id="sign-in-header">Kaboomio</h1>
         </div>
         <div class="header-right">
             <div class="icons">
-                <a href="../leaderboard/">
-                    <img src="../assets/trophy-icon.png" id="trophy-icon" />
+                <a href="../leaderboard/" draggable="false">
+                    <img src="../assets/trophy-icon.png" id="trophy-icon" draggable="false" />
                 </a>
                 <span class="tooltip">Leaderboard</span>
             </div>
@@ -60,7 +60,7 @@
     </main>
     <footer>
         <div class="footer-left">
-            <a href="../about-page" id="about-link">
+            <a href="../about-page" id="about-link" draggable="false">
                 <div>
                     Meet the Team
                 </div>
