--- a/leaderboard/index.html
+++ b/leaderboard/index.html
@@ -37,8 +37,8 @@
         </div>
         <div class="header-right">
             <div class="icons">
-                <a href="../">
-                    <img src="../assets/sign-in-icon.png" id="sign-in-icon" />
+                <a href="../" draggable="false">
+                    <img src="../assets/sign-in-icon.png" id="sign-in-icon" draggable="false" />
                 </a>
                 <span class="tooltip">Sign In</span>
             </div>
@@ -48,7 +48,7 @@
     <div class="leaderboard">
 <div class="leaderboard-left">
 
-    <a href="/about-page/index.html"><img class="trophy" src="../assets/leaderboard-trophy.png" alt=""></a>
+    <a href="/about-page/index.html" draggable="false"><img class="trophy" src="../assets/leaderboard-trophy.png" alt="" draggable="false"></a>
 
 </div>
 
@@ -76,7 +76,7 @@
     </div>
     <footer>
         <div class="footer-left">
-            <a href="../about-page" id="about-link">
+            <a href="../about-page" id="about-link" draggable="false">
                 <div>
                     Meet the Team
                 </div>
