--- a/profile-page/index.html
+++ b/profile-page/index.html
@@ -34,7 +34,7 @@
         <section class="flex-row space-between infoSection">
             <div class="profileMargins">
                 <div class="flex-row">
-                    <img src="" alt="No Avatar" id="avatar">
+                    <img src="" alt="No Avatar" id="avatar" draggable="false">
                     <h2 id="username">Mario!</h2>
                 </div>
                 <span id="joinedDate">Joined Date: </span>
@@ -155,7 +155,7 @@
     </main>
     <footer>
         <div class="footer-left">
-            <a href="../about-page" id="about-link">
+            <a href="../about-page" id="about-link" draggable="false">
                 <div>
                     Meet the Team
                 </div>
