--- a/profile-setup/index.html
+++ b/profile-setup/index.html
@@ -29,14 +29,14 @@
         </div>
         <div class="header-right">
             <div class="icons">
-                <a href="../leaderboard/">
-                    <img src="../assets/trophy-icon.png" id="trophy-icon" />
+                <a href="../leaderboard/" draggable="false">
+                    <img src="../assets/trophy-icon.png" id="trophy-icon" draggable="false" />
                 </a>
                 <span class="tooltip">Leaderboard</span>
             </div>
             <div class="icons">
                 <a>
-                    <img src="../assets/logout-icon.png" id="logout-icon" />
+                    <img src="../assets/logout-icon.png" id="logout-icon" draggable="false" />
                 </a>
                 <span class="tooltip">Logout</span>
             </div>
@@ -148,7 +148,7 @@
     </main>
     <footer>
         <div class="footer-left">
-            <a href="../about-page" id="about-link">
+            <a href="../about-page" id="about-link" draggable="false">
                 <div>
                     Meet the Team
                 </div>
