Updated mario js to to remove last eslint errors and updated image paths

--- a/about-page/index.html
+++ b/about-page/index.html
@@ -95,7 +95,7 @@
                 <h3 class="about-name">Riley Hoffman</h3>
                 <div class="about-img-bio-container">
                     <div class="about-img">
-                        <img src="../assets/avatars/mario.png" alt="" class="about-imgs">
+                        <img src="https://houeghgfcehojgitoeuv.supabase.co/storage/v1/object/public/avatars/mario.png" alt="" class="about-imgs">
                     </div>
                     <div class="about-bio">
                         <p class="about-bio">blah blah blah blah blah blah blah blah blah blah</p>
@@ -108,7 +108,7 @@
             <div class="about-team">
                 <div class="about-name-img-container">
                     <h3 class="about-name">Riley Hoffman</h3>
-                    <img src="../assets/avatars/mario.png" alt="" class="about-imgs">
+                    <img src="https://houeghgfcehojgitoeuv.supabase.co/storage/v1/object/public/avatars/mario.png" alt="" class="about-imgs">
                 </div>
                 <div class="about-bio-container">
                     <p class="about-bio">blah blah blah blah blah blah blah blah blah blah</p>
@@ -120,7 +120,7 @@
             <div class="about-team">
                 <div class="about-name-img-container">
                     <h3 class="about-name">Riley Hoffman</h3>
-                    <img src="../assets/avatars/mario.png" alt="" class="about-imgs">
+                    <img src="https://houeghgfcehojgitoeuv.supabase.co/storage/v1/object/public/avatars/mario.png" alt="" class="about-imgs">
                 </div>
                 <div class="about-bio-container">
                     <p class="about-bio">blah blah blah blah blah blah blah blah blah blah</p>
@@ -132,7 +132,7 @@
             <div class="about-team">
                 <div class="about-name-img-container">
                     <h3 class="about-name">Riley Hoffman</h3>
-                    <img src="../assets/avatars/mario.png" alt="" class="about-imgs">
+                    <img src="https://houeghgfcehojgitoeuv.supabase.co/storage/v1/object/public/avatars/mario.png" alt="" class="about-imgs">
                 </div>
                 <div class="about-bio-container">
                     <p class="about-bio">blah blah blah blah blah blah blah blah blah blah</p>
