adding gameboy container

--- a/mario/index.html
+++ b/mario/index.html
@@ -9,14 +9,11 @@
 </head>
 
 <body>
+    <header>
+        <div></div>
+    </header>
+    <img src="../assets/gameboyContainer.png" alt="" id="gameboyContainer">
     <script type="module" src="./mario.js"></script>
-
-    <!-- <script type="module" src="../build.js"></script> -->
-    <!-- <form>
-        <label for="fname">Initals</label><br>
-        <input type="text" id="initials" name="initials"><br>
-        <input type="submit" value="Submit">
-      </form> -->
 </body>
 
 </html>
