moved leaderboard icon

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
                 font-size: 1rem;
             }
         }
+        .icons {
+            margin-right: 15px;
+        }
     </style>
     <title>Sign In | Kaboomio</title>
 </head>
