--- a/home-page/index.html
+++ b/home-page/index.html
@@ -26,7 +26,7 @@
     <main id="homepage2">
         <section id="kaboomio">
             <h1>Welcome to Kaboomio</h1>
-            <img id="kaboomio-img" src="/assets/Kaboomio.gif" draggable="false" />
+            <img id="kaboomio-img" src="/assets/kaboomio-logo-big.png" draggable="false" />
         </section>
         <h1>Lets play some games</h1>
         <section id="second-row">
