finished my bio

--- a/about-page/index.html
+++ b/about-page/index.html
@@ -120,13 +120,15 @@
             <div class="about-team">
                 <div class="about-name-img-container">
                     <h3 class="about-name">Riley Hoffman</h3>
-                    <img src="https://houeghgfcehojgitoeuv.supabase.co/storage/v1/object/public/avatars/mario.png" alt="" class="about-imgs"draggable="false">
+                    <img src="../assets/riley-headshot.jpeg" alt="" class="about-imgs" draggable="false">
                 </div>
                 <div class="about-bio-container">
-                    <p class="about-bio">blah blah blah blah blah blah blah blah blah blah</p>
-                    <p class="about-bio">blah blah blah blah blah blah blah blah blah blah</p>
-                    <p class="about-bio">blah blah blah blah blah blah blah blah blah blah</p>
-                    <p class="about-bio">blah blah blah blah blah blah blah blah blah blah</p>
+                    <ul>
+                        <li class="about-bio">Riley is a full stack software developer in training, hailing from Portland, OR</li>
+                        <li class="about-bio">Outside of coding, he enjoys skiing, running, eating gyros, and watching any sport under the sun.</li>
+                        <li class="about-bio">Favorite Mario Character: Toad</li>
+                        <li class="about-bio">Favorite Retro Game: Galaga</li>
+                    </ul>
                 </div>
             </div>
             <div class="about-team">
